[metadata]
name = aoc2020
author = tomasaschan
license = MIT

[options]
packages = find:
package_dir =
    =src

python_requires = >= 3.9

[options.extras_require]
dev =
    black
    flake8
test =
    pytest
    pytest-watch
    pytest-custom_exit_code


[options.packages.find]
where = src

[tool:pytest]
addopts = --suppress-no-test-exit-code

[flake8]
max-line-length = 88
