[metadata]
name = aoc2020
author = tomasaschan
license = MIT

[options]
packages = find:
package_dir =
    =src

python_requires = >= 3.9

[options.extras_require]
dev =
    black
    flake8
test =
    pytest
    pytest-custom_exit_code
    pytest-watch
    pytest-xdist[psutil]


[options.packages.find]
where = src

[tool:pytest]
addopts = --suppress-no-test-exit-code
python_files = *dec*.py
python_functions = part_*

[flake8]
max-line-length = 88
ignore = E203, W503
